[tool.poetry]
name = "temp-store"
version = "0.1.0"
description = ""
authors = ["Patrick Stünkel <webminz@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
minio = "^7.2.4"
pymongo = "^4.6.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.15"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
types-psycopg2 = "^2.9.21.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
